<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:paddingLeft="10dp"
    android:paddingTop="20dp"
    android:paddingRight="10dp"
    >
    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Creează-ți propriul cont" 
        android:textSize="20dp"
        android:textColor="#000000"/>

    <TableRow android:layout_marginTop="30dp">
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nume"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/nume"
        android:layout_width="243dp"
        android:inputType="textPersonName"
        android:layout_height="wrap_content"

        android:layout_marginBottom="5dp"
        android:ems="10">
    </EditText>
    </TableRow>

    <TableRow >
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prenume"
        android:textColor="#000000" />

   <EditText
        android:id="@+id/prenume"
        android:inputType="textPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:ems="10" >
	
       
    </EditText>
	</TableRow>
    
    <TableRow >
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/telefon" 
        android:textColor="#000000"/>
	
    <EditText
        android:id="@+id/telefon"
        android:layout_width="match_parent"
        android:inputType="phone"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:ems="10" />
    </TableRow>

    <TableRow >
    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/email"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_marginBottom="5dp"
        android:layout_height="wrap_content"
        android:ems="10" />
    </TableRow>
    
    <TableRow >
    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/parola"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/parola"
        android:layout_width="match_parent"
        android:inputType="textPassword"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:ems="10" />
    </TableRow>
    <TableRow >
    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirma_parola" 
        android:textColor="#000000"/>

    <EditText
        android:id="@+id/confirma_parola"
        android:layout_width="match_parent"
        android:inputType="textPassword"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:ems="10" />
    </TableRow>
    <TableRow >
    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/anul_nasterii" 
        android:textColor="#000000"/>

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:prompt="@string/textspinner"
        android:layout_marginBottom="5dp" />
    
    </TableRow>
   
        <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/salveaza_cont"
        android:enabled="false" 
        android:onClick="creeazaCont"
        android:textSize="15dp"/>
 

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/dejaMembru"
        android:onClick="dejaMembru"
        android:layout_marginTop="10dp"
        android:textColor="#FFFFFF"/>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="70dp"
        android:text="* Parola trebuie sa contina litere mari si mici, cel putin o cifra, cel putin unul dintre caracterele @,#,$ si % si sa aiba cel putin 6 caractere" />

</TableLayout>
