<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="20dp" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Pagina de logare" 
        android:textSize="20dp"
        android:textColor="#000000"/>

    <EditText
        android:id="@+id/etemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/adresa_mail"
        android:inputType="textEmailAddress"
        android:paddingLeft="5dp"
        android:layout_marginBottom="10dp" 
        android:textSize="12sp">

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/etparola"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/parola"
        android:inputType="textPassword" 
        android:paddingLeft="5dp"
        android:textSize="12sp"/>

    <Button
        android:id="@+id/btn_conectare"
 		android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginTop="30dp"
        android:enabled="true"
        android:layout_gravity="center_horizontal"
        android:text="@string/conecteaza_te"
        android:onClick="conectare" 
        android:textSize="12sp"
        />
    

</LinearLayout>
