<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/tnc"
    tools:context="com.example.teatrulcaracalean.MainActivity" >
         <!--android:layout_alignParentBottom="true" -->

        <Button
            android:id="@+id/btnrezervare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignRight="@+id/btnbiografii"
            android:text="@string/rezervare"
            android:onClick = "rezervare" />

        <Button
            android:id="@+id/btnbiografii"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/btnrezervare"
            android:onClick="biografii"
            android:text="@string/biografii" />

        <Button
            android:id="@+id/btnexit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/btndespre"
            android:layout_alignRight="@+id/btndespre"
            android:layout_below="@+id/btndespre"
            android:onClick="exitApp"
            android:text="@string/exit" />

        <Button
            android:id="@+id/btndespre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/btnbiografii"
            android:layout_alignRight="@+id/btnbiografii"
            android:layout_below="@+id/btnbiografii"
            android:onClick="despre"
            android:text="@string/despre" />

</RelativeLayout>
